fix checkbox align due to centering option

--- a/dark-inspired-github.user.styl
+++ b/dark-inspired-github.user.styl
@@ -1475,11 +1475,14 @@ bsh() { box-shadow: arguments }
             margin-right: auto
             margin-left: auto
         }
-        .width-full:not([style*='z-index:3']):not(img):not(label):not(.BtnGroup):not(.subnav-search-input-wide):not([class*='dropdown']):not(.SelectMenu ) {
+        .width-full:not([style*='z-index:3']):not(img):not(label):not(.BtnGroup):not(.subnav-search-input-wide):not([class*='dropdown']) {
             width: 95% i
             max-width: 1220px i
             margin-right: auto i
             margin-left: auto i
+        }
+        .SelectMenu input[type='checkbox'] {
+          margin-left: .2rem
         }
         .js-header-wrapper {
             .Header {
